<resources>
    <string name="app_name">Machine Learning Tests</string>
    <string name="machine_learning_tests">MACHINE LEARNING TESTS</string>
    <string name="choose_a_test_category">CHOOSE A TEST CATEGORY</string>
    <string name="face_detection">FACE DETECTION</string>
    <string name="image_label_generator">IMAGE LABEL GENERATOR</string>
    <string name="text_scanning">TEXT SCANNING</string>
    <string name="barcode_scanning">BARCODE SCANNING</string>

    <string name="tag_bottom_sheet">BOTTOM_SHEET</string>
    <string name="please_show_image">No image is selected. Please select an image first.</string>
    <string name="please_try_again">It seems like an error has occurred. Please try again.</string>
    <string name="null_photo_error">Oops. Null photo path.</string>
    <string name="couldnt_create_error">Oops. Photo file couldn\'t be created. Please try again.</string>
    <string name="no_image_selected_oops">Oops. Seems like no image was selected.</string>
</resources>
