<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorTextFour">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/colorTextFive"
            tools:ignore="ContentDescription,SmallSp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="20sp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:textColor="@color/colorTextTwo"
            android:text="@string/machine_learning_tests"
            android:gravity="center"
            android:id="@+id/test_name"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:background="@color/colorTextThree"
            tools:ignore="ContentDescription,SmallSp" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10sp">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12sp"
                    android:layout_marginBottom="22sp"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    app:cardCornerRadius="15sp"
                    app:cardBackgroundColor="@color/primary_new_light"
                    app:cardElevation="0sp"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_marginLeft="13sp"
                        android:layout_marginRight="13sp"
                        android:layout_marginBottom="5sp"
                        android:layout_marginTop="5sp"
                        android:text="@string/choose_a_test_category"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    app:cardElevation="2sp"
                    android:id="@+id/face_detection_card">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorTextFive"
                            android:id="@+id/face_detection_image"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:textSize="18sp"
                            android:paddingTop="8sp"
                            android:paddingBottom="8sp"
                            android:textColor="@color/colorTextTwo"
                            android:gravity="center"
                            android:layout_gravity="bottom"
                            android:text="@string/face_detection"/>

                    </FrameLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    app:cardElevation="2sp"
                    android:id="@+id/barcode_scanning_card">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorTextFive"
                            android:id="@+id/barcode_scanning_image"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:textSize="18sp"
                            android:paddingTop="8sp"
                            android:paddingBottom="8sp"
                            android:textColor="@color/colorTextTwo"
                            android:gravity="center"
                            android:layout_gravity="bottom"
                            android:text="@string/barcode_scanning"/>

                    </FrameLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    app:cardElevation="2sp"
                    android:id="@+id/text_scanning_card">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorTextFive"
                            android:id="@+id/text_scanning_image"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:textSize="18sp"
                            android:paddingTop="8sp"
                            android:paddingBottom="8sp"
                            android:textColor="@color/colorTextTwo"
                            android:gravity="center"
                            android:layout_gravity="bottom"
                            android:text="@string/text_scanning"/>

                    </FrameLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    app:cardElevation="2sp"
                    android:id="@+id/image_label_generator_card">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorTextFive"
                            android:id="@+id/image_label_generator_image"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:textSize="18sp"
                            android:paddingTop="8sp"
                            android:paddingBottom="8sp"
                            android:textColor="@color/colorTextTwo"
                            android:gravity="center"
                            android:layout_gravity="bottom"
                            android:text="@string/image_label_generator"/>

                    </FrameLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>